# cpp-playground

projects/serial-setup/: serial.cpp
projects/showkey/: generate-keycodes.py  meson.build
projects/showkey/src/: code2str.txt  main.cpp
projects/showkey/submodules/: cutil-macros
projects/thrustmaster-cosnole/: meson.build
projects/thrustmaster-cosnole/src/: caps.cpp  caps.hpp  console.cpp  controller-state.hpp  input-decoder.cpp  input-decoder.hpp  receptor.cpp  state-encoder.cpp  state-encoder.hpp  udp.cpp  udp.hpp
projects/thrustmaster-cosnole/submodules/: cutil
projects/ydlidar-demo/: README.md  meson.build  meson_options.txt
projects/ydlidar-demo/src/: lidar.cpp  lidar.hpp  main.cpp  payloader.cpp  payloader.hpp  protocol.hpp  transmitter.cpp  udp.cpp  udp.hpp
projects/ydlidar-demo/submodules/: gawl
